# TodoNext

./: .gitignore  CMakeLists.txt  README.md
package/: metadata.json
package/contents/config/: main.xml
package/contents/ui/: ListDialog.qml  main.qml
todonext/: CMakeLists.txt  Template  abstracttask.h  default_scheduler.cpp  default_scheduler.h  defaulttask.cpp  qmldir  scheduler.h  task.cpp  task.h  todonext.cpp  todonext.h  todonextplugin.cpp  todonextplugin.h
